--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:e2e": "playwright test"
+    "test": "jest --watch",
+    "test:ci": "JEST_JUNIT_OUTPUT_DIR=test-results JEST_JUNIT_OUTPUT_NAME=junit.xml jest --watchAll=false --testResultsProcessor=\"jest-junit\""
   },
   "dependencies": {
     "@cucumber/cucumber": "^9.5.1",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -25,6 +31,8 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.37.1"
+    "@playwright/test": "^1.37.1",
+    "@types/jest": "^29.5.4",
+    "@types/testing-library__jest-dom": "^6.0.0"
   }
 }
