--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@playwright/test": "^1.37.1",
     "@types/jest": "^29.5.4",
-    "@types/testing-library__jest-dom": "^6.0.0"
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "jest-junit": "^16.0.0"
   }
 }
