--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
@@ -33,6 +32,7 @@
   "devDependencies": {
     "@playwright/test": "^1.37.1",
     "@types/jest": "^29.5.4",
+    "@types/react": "^18.2.21",
     "@types/testing-library__jest-dom": "^6.0.0",
     "jest-junit": "^16.0.0"
   }
