--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,7 +49,7 @@ jobs:
           ketryx-url: ${{ secrets.KETRYX_URL }}
           project: ${{ secrets.KETRYX_PROJECT }}
           api-key: ${{ secrets.KETRYX_API_KEY }}
-          version: 1.0.0
+          version: KXVSN39TM9PBF0M8NJSDHJ4ZK8M2V1H
           build-name: ci
           test-junit-path: test-results/junit.xml
 
